# electric_products

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_08_20_0914-92ecdff84642_create_tables_products.py  2025_08_20_1029-9351ffb203e6_del_unique_constraint_from_products_.py  2025_08_20_1205-6ebdf236b72e_change_unique_constraint_in_all_tables_.py  2025_08_20_1407-26cb74def952_create_tables_products.py  2025_08_20_1414-c2dc597f71f0_remove_unique_index_from_product_.py  2025_08_20_1454-c34a81e11a86_add_null_to_all_types_of_prices_in_.py  2025_08_21_1225-24a220989ec3_create_table_warehouses_remake_table_.py  2025_08_21_1421-11d21a715170_add_created_at_to_warehouses.py
csv_files/: Остатки электрика по складам.csv  цены электрика.csv
database/: __init__.py  base.py
files/: warehouses_data.py  Справочник электрика.csv  цены электрика.csv
src/: config.py  main.py
src/products/: models.py  router.py  routers.py  schema.py  schemas.py  services.py
src/utils/: parse_data.py
src/utils/add_data_to_db/: add_main_file.py  add_prices.py  add_product_stocks.py  add_products.py  add_warehouses.py
src/utils/parsing_data/: add_data_to_db.py  data_parser.py  read_data_from_csv.py
src/warehouses/: models.py
